sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/SwitchStatementInPlaceOfSwitchPseudex.sand
pub class SwitchStatementInPlaceOfSwitchPseudex {
    foo() {
        let a = switch val {
            case c {
                foo();
            }

            else {
                foo();
            }
        };
    }
}